# nautilus_trader_examples

./: .gitignore  .pre-commit-config.yaml  README.md  faq.md  pyproject.toml
docs/: 2025-01 FAQ - Notes from Discord by (@ikeepo).md  2025-01 FAQ - Notes from Discord.md  2025-01 FAQ - from @ikeepo.md  FAQ.md  FAQ_from_discord.md
src/!helpers/: all_imports.py
src/0000 Starter template for examples/: run_backtest.py  strategy.py
src/0000_starter_template_for_examples/: run_backtest.py  strategy.py
src/0001 DemoStrategy - Load 1-min bars from CSV file/: run_backtest.py  strategy.py
src/0001 Load 1-min bars from CSV file/: run_backtest.py  utils.py
src/0001_load_1min_bars_from_CSV_file/: run_backtest.py  utils_instruments.py
src/0002 DemoStrategy - Use Clock's Timer and Alert + Bracket order/: strategy.py  utils.py
src/0002 Use Clock's Timer and Alert + Bracket order/: run_backtest.py  strategy.py  utils.py
src/0002_use_clock_timer_and_alert_plus_bracket_order/: strategy.py
src/0003 DemoStrategy - Use CacheConfig/: strategy.py
src/0003 Use CacheConfig/: run_backtest.py
src/0003_use_cache_config/: run_backtest.py  strategy.py
src/0004 DemoStrategy - Export data and use ParquetDataCatalog/: run_backtest.py  strategy.py
src/0004 Export data and use ParquetDataCatalog/: run_backtest.py  strategy.py
src/0004_export_data_and_use_parquet_data_catalog/: run_backtest.py  strategy.py
src/0005 MRE (Minimalistic example with artificial bars)/: run_backtest.py
src/0005 Minimalistic one-file example/: run_backtest.py
src/0005_MRE_minimalistic_reproducible_example/: run_backtest.py
src/0006 DemoStrategy - Internally generated 5-min bars/: run_backtest.py  strategy.py
src/0006 Internally generated 5-min bars/: run_backtest.py  strategy.py  utils.py
src/0006_internally_generated_5min_bars/: run_backtest.py  strategy.py  utils_instruments.py
src/0007 Accessing Portfolio and Cache/: run_backtest.py  strategy.py
src/0007_accessing_portfolio_and_cache/: strategy.py  utils_csv.py
src/0008 Simple indicator + Cascaded Indicator/: run_backtest.py  strategy.py
src/0008_simple_and_cascaded_indicator/: strategy.py  utils_csv.py
src/0009 Custom event with msgbus.publish()/: run_backtest.py  strategy.py
src/0009_custom_event_with_msgbus.publish()/: strategy.py
src/0010 Using Actor + publish_data()/: actor_and_data.py  run_backtest.py  strategy.py  utils.py  utils_instruments.py
src/0010_using_actor_and_publish_data()/: actor_and_data.py  strategy.py  utils_instruments.py
src/0011 Using Actor + publish_signal()/: actor_and_data.py  run_backtest.py  strategy.py
src/0011_using_actor_and_publish_signal()/: actor_and_data.py  run_backtest.py  strategy.py
src/0012 Tutorial - Finite State Machine/: example_fsm.py
src/0012_finite_state_machine/: example_fsm.py
src/0013 Adaptive Bar Ordering (for OHLC bars)/: run_backtest.py
src/0013 DemoStrategy - Adaptive Bar Ordering (for OHLC bars)/: run_backtest.py
src/0013_adaptive_bar_ordering_for_OHLC_bars/: run_backtest.py
src/0014 EMA cross strategy (simple)/: run_backtest.py  strategy.py
src/0014 MA cross strategy (simple)/: strategy.py
src/0014_MA_cross_strategy/: run_backtest.py  strategy.py
(+2 files in other folders)
