[project]
name = "nautilus_trader_examples"
version = "0.1.0"
description = "Demo examples of various strategies and features implemented in NautilusTrader."
readme = "README.md"
requires-python = "==3.12.*"
dependencies = [
    "nautilus_trader==1.211.0",
]

# Define which packages should be downloaded from which package-index
[tool.uv.sources]
nautilus_trader = { index = "pypi_nautilus" }

# Package index: Standard Python
[[tool.uv.index]]
name = "pypi_classic"
url = "https://pypi.org/simple"

## Package index: NautilusTrader custom index containing also alpha/devepment builds
## Link to see available packages: https://packages.nautechsystems.io/simple/nautilus-trader/index.html
[[tool.uv.index]]
name = "pypi_nautilus"
url = "https://packages.nautechsystems.io/simple"
explicit = true  # use this index only for explicitly configured dependencies. No other packages won't be installd from this index

[tool.ruff]
line-length = 100
fix = true
show-fixes = true
exclude = [
    "src/!helpers/all_imports.py",  # contains unused example imports for beginners and we don't want them to be removed
]